# Proyecto-atencion-en-linea

./: .gitignore  CHANGELOG.md  CONTEXT.md  CasaproApp.spec  CasaproNexus.spec  Evaluacion_Export_Excel.md  FASE_7_TESTING_PLAN.md  FIX_USUARIOS_SUMMARY.md  GEMINI.md  GITHUB_UPDATES.md  MEJORAS_ESTRUCTURA.md  NEXUS.md  README.md  README_UPDATES.md  STOCK_MIGRATION_PLAN.md  SUMMARY.md  WARP.md  app.manifest  app.py  app.spec  app.txt  appb.txt  build.bat  check_index_health.sql  check_indices.py  concept_almacenes_tratables.md  db_config.ini  demo_stock_reload.py  diagnostico_perdida_ventas.py  diff.txt  documentacion.md  ex.txt  implementation_plan.md  inject_timers.py  install_excel_support.bat  logs.html  md.html  overview.md  refactor.py  requirements.txt  (+12 more)
posmigra/: IMPROVEMENTS.md  PLAN_STATUS.md  TEST_PLAN.md  alembic.ini  backend.spec  pyproject.toml  pytest.ini  run_backend.py
posmigra/alembic/: README.md  env.py
posmigra/app/: __init__.py  crud.py  database.py  db.py  dependencies.py  main.py  models.py  utils.py
posmigra/app/crud/: mbrp_crud.py  stock_crud.py  tra_crud.py
posmigra/app/routers/: __init__.py  auth.py  config.py  mbrp_router.py  stock.py  stock_router.py  tra_router.py
posmigra/legacy/: tra.py
posmigra/posmigra/: PLAN_STATUS.md  UI_CONCEPT.md
posmigra/react_app/: index.html  package-lock.json  package.json
posmigra/react_app/public/: electron.js
posmigra/react_app/src/: App.css  App.jsx  index.css  main.jsx
posmigra/tests/: __init__.py  conftest.py
posmigra/tests/core/: __init__.py
posmigra/tests/e2e/: __init__.py
(+172 files in other folders)
