[tool.poetry]
name = "posmigra-backend"
version = "0.1.0"
description = "Subproyecto de migración: backend desacoplado y tooling asociado para Proyecto-atencion-en-linea."
authors = ["Equipo NEXUS"]
readme = "IMPROVEMENTS.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
httpx = "^0.27.2"
# Dependencias de pal/ necesarias para la migración
pyodbc = "*"
bcrypt = "*"
cryptography = "*"
keyring = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


